--- a/package.json
+++ b/package.json
@@ -1,4 +1,16 @@
 {
+  "name": "prometheus-poker-analytics",
+  "version": "1.0.0",
+  "description": "PROMETHEUS - Advanced Poker Analytics Dashboard with Bot Detection",
+  "scripts": {
+    "build": "cd frontend && npm install && npm run build",
+    "start": "cd frontend && npm start",
+    "dev": "cd frontend && npm run dev",
+    "install": "cd frontend && npm install"
+  },
+  "keywords": ["poker", "analytics", "bot-detection", "prometheus"],
+  "author": "Christopher Genberg",
+  "license": "MIT",
   "dependencies": {
     "react-icons": "^5.5.0",
     "sqlite3": "^5.1.7",
