🚀 RENDER DEPLOYMENT READY: Complete build fixes and security improvements - Fixed Next.js 15 useSearchParams Suspense boundary requirement - Resolved TypeScript parameter types in PlayerDashboard component - Fixed API route parameter handling for Next.js 15 compatibility - Updated ESLint config to allow production builds with warnings - ALL OpenAI API keys moved to environment variables - Root package.json with proper build/start scripts including cache clearing - Build command: cd frontend && npm install && rm -rf .next && npm run build - PROMETHEUS GOD MODE with clickable player names working - Player Analysis pages with English translations complete - Build status: ✅ SUCCESSFUL with 33 static pages generated

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "PROMETHEUS - Advanced Poker Analytics Dashboard with Bot Detection",
   "scripts": {
-    "build": "cd frontend && npm install && npm run build",
+    "build": "cd frontend && npm install && rm -rf .next && npm run build",
     "start": "cd frontend && npm start",
     "dev": "cd frontend && npm run dev",
     "install": "cd frontend && npm install"
