--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,13 @@
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "^20.19.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/react-window": "^1.8.8",
+    "@types/react-window-infinite-loader": "^1.0.9",
     "@types/recharts": "^1.8.29",
+    "@types/sqlite3": "^3.1.11",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -38,18 +43,12 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.8.3",
     "use-debounce": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20.19.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@types/react-window-infinite-loader": "^1.0.9",
-    "@types/sqlite3": "^3.1.11",
     "eslint": "^9.29.0",
-    "eslint-config-next": "^15.3.3",
-    "tw-animate-css": "^1.3.4",
-    "typescript": "^5.8.3"
+    "eslint-config-next": "^15.3.3"
   }
 }
