--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "node ../scripts/production-setup.js",
+    "health": "node ../scripts/production-setup.js health",
+    "setup-production": "node ../scripts/production-setup.js"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.2",
