--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postbuild": "node ../scripts/production-setup.js",
-    "health": "node ../scripts/production-setup.js health",
+    "health": "node ../scripts/production-setup.js",
     "setup-production": "node ../scripts/production-setup.js"
   },
   "dependencies": {
