--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "setup-production": "node ../scripts/production-setup.js"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.9",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
